toList 변경